# logdetective-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: pre-commit.yml  publish.yml  tests.yml
src/logdetective_mcp/: extractor.py  main.py
tests/: test_extractor.py  test_main.py
