[project]
name = "logdetective-mcp"
version = "0.1.0"
description = "Log Detective MCP server"
readme = "README.md"
license = "Apache-2.0"
license-files = [
  "LICENSE"
  ]
requires-python = ">=3.11"
authors = [
    { "name" = "Jiri Podivin", "email" = "jpodivin@redhat.com" }
  ]
dependencies = [
    "drain3-improved>=0.10.0",
    "mcp>=1.27.2",
    "pydantic>=2.13.4",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: System :: Logging",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
